--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                  <h2>Efficient Subgraph GNNs by Learning Effective Selection Policies</h2>
                  <p>
                    Beatrice Bevilacqua, Moshe Eliasof, Eli Meirom, Bruno Ribeiro, Haggai Maron <br>
-                    <i> Technical report, 2023 </i> <br>
+                   <i>International Conference on Learning Representations (ICLR) 2024</i> <br>
 
                  </p>
                  <a class="btn btn-default abstract" ptitle="Subgraph GNNs are provably expressive neural architectures that learn graph representations from sets of subgraphs. Unfortunately, their applicability is hampered by the computational complexity associated with performing message passing on many subgraphs. In this paper, we consider the problem of learning to select a small subset of the large set of possible subgraphs in a data-driven fashion. We first motivate the problem by proving that there are families of WL-indistinguishable graphs for which there exist efficient subgraph selection policies: small subsets of subgraphs that can already identify all the graphs within the family. We then propose a new approach, called Policy-Learn, that learns how to select subgraphs in an iterative manner. We prove that, unlike popular random policies and prior work addressing the same problem, our architecture is able to learn the efficient policies mentioned above. Our experimental results demonstrate that Policy-Learn outperforms existing baselines across a wide range of datasets."> Abstract</a>
@@ -226,7 +226,8 @@
                  <h2>Graph Metanetworks for Processing Diverse Neural Architectures</h2>
                  <p>
                    Derek Lim, Haggai Maron, Marc T. Law, Jonathan Lorraine, James Lucas <br>
-                    <i> Technical report, 2023 </i> <br>
+                   <i>International Conference on Learning Representations (ICLR) 2024</i> <br>
+                   <p style="color:red;">Spotlight Presentation</p>
 
                  </p>
                  <a class="btn btn-default abstract" ptitle="Neural networks efficiently encode learned information within their parameters. Consequently, many tasks can be unified by treating neural networks themselves as input data. When doing so, recent studies demonstrated the importance of accounting for the symmetries and geometry of parameter spaces. However, those works developed architectures tailored to specific networks such as MLPs and CNNs without normalization layers, and generalizing such architectures to other types of networks can be challenging. In this work, we overcome these challenges by building new metanetworks - neural networks that take weights from other neural networks as input. Put simply, we carefully build graphs representing the input neural networks and process the graphs using graph neural networks. Our approach, Graph Metanetworks (GMNs), generalizes to neural architectures where competing methods struggle, such as multi-head attention layers, normalization layers, convolutional layers, ResNet blocks, and group-equivariant linear layers. We prove that GMNs are expressive and equivariant to parameter permutation symmetries that leave the input neural network functions unchanged. We validate the effectiveness of our method on several metanetwork tasks over diverse neural network architectures."> Abstract</a>
