--- a/index.html
+++ b/index.html
@@ -98,6 +98,9 @@
                 <h4>News</h4>
                 <ul>
                 <li> See my recent talk on <a href='https://www.youtube.com/watch?v=B9xFem6_ckQ&t=8182s'>Equivaraint architectures for learning in deep weight spaces </a>. </li>
+                <li> A new <a href='https://developer.nvidia.com/blog/designing-deep-networks-to-process-other-deep-networks/'> blog post on Equivaraint architectures for learning in deep weight spaces </a>. </li>
+
+
 
                 <li> I will serve as an area chair at NeurIPS 2023.</li>
                 <li> A recent <a href='https://explainable.podbean.com/e/%d7%a8%d7%a9%d7%aa%d7%95%d7%aa%d7%a0%d7%95%d7%99%d7%a8%d7%95%d7%a0%d7%99%d7%9d%d7%a2%d7%9c-%d7%92%d7%a8%d7%a4%d7%99%d7%9d-%d7%a2/?fbclid=IwAR2oz8wjYc0qSwIt2clNWrFeMzNJMvV5Ycop166V6p5ZSB0JYeHF8sEkghg
@@ -351,6 +354,8 @@ To obtain these benefits, we develop novel sign equivariant neural network archi
                  <a href="https://arxiv.org/abs/2301.12780" class="btn btn-default">Paper </a>
                  <a href="https://www.youtube.com/watch?v=B9xFem6_ckQ&t=8182s" class="btn btn-default">Talk </a>
                  <a href="https://avivnavon.github.io/DWSNets/" class="btn btn-default">Code </a>
+                 <a href="                 https://developer.nvidia.com/blog/designing-deep-networks-to-process-other-deep-networks/" class="btn btn-default">Blog </a>
+
              </div>
            </div><!-- end of row -->
 
