--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                 <p>
                 <h4>News</h4>
                 <ul>
-                <li> 5 papers excepted to ICML 2024.</li>
+                <li> 5 papers accepted to ICML 2024.</li>
                 <li> See my recent talk on <a href='https://www.youtube.com/watch?v=B9xFem6_ckQ&t=8182s'>Equivaraint architectures for learning in deep weight spaces </a>. </li>
                 <li> A new <a href='https://developer.nvidia.com/blog/designing-deep-networks-to-process-other-deep-networks/'> blog post on Equivaraint architectures for learning in deep weight spaces </a>. </li>
                 <li> I will serve as an area chair at NeurIPS 2023.</li>
