--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                       </p>
                       <a class="btn btn-default abstract" ptitle="Incorporating spectral information to enhance Graph Neural Networks (GNNs) has shown promising results but raises a fundamental challenge due to the inherent ambiguity of eigenvectors. Various architectures have been proposed to address this ambiguity, referred to as spectral invariant architectures. Notable examples include GNNs and Graph Transformers that use spectral distances, spectral projection matrices, or other invariant spectral features.
 However, the potential expressive power of these spectral invariant architectures remains largely unclear. The goal of this work is to gain a deep theoretical understanding of the expressive power obtainable when using spectral features. We first introduce a novel message-passing framework for designing spectral invariant GNNs, called Eigenspace Projection GNN (EPNN). Our comprehensive analysis shows that EPNN essentially unifies all prior spectral invariant architectures, in that they are either strictly less expressive or equivalent to EPNN. A fine-grained expressiveness hierarchy among different architectures is also established. On the other hand, we present a surprising result that EPNN itself is bounded by a recently proposed class of Subgraph GNNs, implying that all these spectral invariant architectures are strictly less expressive than 3-WL. Finally, we demonstrate that these spectral features offer no additional advantage when combined with more expressive GNNs."> Abstract</a>
-                      <a href="" class="btn btn-default">Paper (coming soon)</a>
+                      <a href="https://arxiv.org/abs/2406.04336" class="btn btn-default">Paper</a>
 
 
                   </div>
@@ -242,7 +242,6 @@ However, the potential expressive power of these spectral invariant architecture
                       </p>
                       <a class="btn btn-default abstract" ptitle="In the realm of Graph Neural Networks (GNNs), two exciting research directions have recently emerged: Subgraph GNNs and Graph Transformers. In this paper, we propose an architecture that integrates both approaches, dubbed Subgraphormer, which combines the enhanced expressive power, message-passing mechanisms, and aggregation schemes from Subgraph GNNs with attention and positional encodings, arguably the most important components in Graph Transformers. Our method is based on an intriguing new connection we reveal between Subgraph GNNs and product graphs, suggesting that Subgraph GNNs can be formulated as Message Passing Neural Networks (MPNNs) operating on a product of the graph with itself. We use this formulation to design our architecture: first, we devise an attention mechanism based on the connectivity of the product graph. Following this, we propose a novel and efficient positional encoding scheme for Subgraph GNNs, which we derive as a positional encoding for the product graph. Our experimental results demonstrate significant performance improvements over both Subgraph GNNs and Graph Transformers on a wide range of datasets."> Abstract</a>
                       <a href="https://arxiv.org/abs/2402.08450" class="btn btn-default">Paper </a>
-                      <a href="https://drive.google.com/file/d/1x1e4VjnW6Z3ubF_Q5YcjEBs4W471cTdo/view?usp=drive_link" class="btn btn-default">Paper </a>
 
 
                   </div>
@@ -264,6 +263,7 @@ However, the potential expressive power of these spectral invariant architecture
                            </p>
                            <a class="btn btn-default abstract" ptitle="Learning in deep weight spaces (DWS), where neural networks process the weights of other neural networks, is an emerging research direction, with applications to 2D and 3D neural fields (INRs, NeRFs), as well as making inferences about other types of neural networks. Unfortunately, weight space models tend to suffer from substantial overfitting. We empirically analyze the reasons for this overfitting and find that a key reason is the lack of diversity in DWS datasets. While a given object can be represented by many different weight configurations, typical INR training sets fail to capture variability across INRs that represent the same object. To address this, we explore strategies for data augmentation in weight spaces and propose a MixUp method adapted for weight spaces. We demonstrate the effectiveness of these methods in two setups. In classification, they improve performance similarly to having up to 10 times more data. In self-supervised contrastive learning, they yield substantial 5-10% gains in downstream classification."> Abstract</a>
                            <a href="https://arxiv.org/abs/2402.04081" class="btn btn-default">Paper </a>
+                           <a href="https://github.com/AvivSham/deep-weight-space-augmentations" class="btn btn-default">GitHub </a>
 
 
                        </div>
@@ -284,7 +284,7 @@ However, the potential expressive power of these spectral invariant architecture
 
                  </p>
                  <a class="btn btn-default abstract" ptitle="Subgraph GNNs are provably expressive neural architectures that learn graph representations from sets of subgraphs. Unfortunately, their applicability is hampered by the computational complexity associated with performing message passing on many subgraphs. In this paper, we consider the problem of learning to select a small subset of the large set of possible subgraphs in a data-driven fashion. We first motivate the problem by proving that there are families of WL-indistinguishable graphs for which there exist efficient subgraph selection policies: small subsets of subgraphs that can already identify all the graphs within the family. We then propose a new approach, called Policy-Learn, that learns how to select subgraphs in an iterative manner. We prove that, unlike popular random policies and prior work addressing the same problem, our architecture is able to learn the efficient policies mentioned above. Our experimental results demonstrate that Policy-Learn outperforms existing baselines across a wide range of datasets."> Abstract</a>
-                 <a href="https://arxiv.org/abs/2312.04501" class="btn btn-default">Paper </a>
+                 <a href="https://arxiv.org/abs/2310.20082" class="btn btn-default">Paper </a>
 
 
              </div>
