--- a/index.html
+++ b/index.html
@@ -150,6 +150,7 @@
 
 
 
+
 <section id="templatemo_publications">
     <div class="container">
 		<hr>
@@ -157,6 +158,36 @@
             <h1>Publications</h1>
         </div>
       </div>
+
+
+      <!--Open problems -->
+         <div class="row" id="templatemo_publications_LargeScaleBD">
+             <div class="col-md-1"></div>
+             <div class="col-md-5 col-sm-7 col-xs-24">
+                 <img src="projects/asymetric_networks/rep.png" width="450" " alt="">
+             </div>
+             <div class="col-md-1"></div>
+             <div class="col-md-16">
+                 <h2>The Empirical Impact of Neural Parameter Symmetries, or Lack Thereof</h2>
+                 <p>
+                   Derek Lim*, Theo (Moe) Putterman*, Robin Walters, Haggai Maron, Stefanie Jegelka<br>
+                 <i>HiLD 2024: 2nd Workshop on High-dimensional Learning Dynamics @ ICML 2024</i> <br>
+                 </p>
+                 <p style="color:red;">Best paper award</p>
+                 <a class="btn btn-default abstract" ptitle="Many algorithms and observed phenomena in deep learning appear to be affected by parameter symmetries — transformations of neural network parameters that do not change the underlying
+      neural network function. These include linear mode connectivity, model merging, Bayesian neural network inference, metanetworks, and several other characteristics of optimization or loss-landscapes.
+      In this work, we empirically investigate the impact of neural parameter symmetries by introducing new neural network architectures that have reduced parameter space symmetries. We develop
+      two methods, with some provable guarantees, of modifying standard neural networks to reduce parameter space symmetries. With these new methods, we conduct a comprehensive experimental
+      study consisting of multiple tasks aimed at assessing the effect of removing parameter symmetries. Our experiments reveal several interesting observations on the empirical impact of parameter
+      symmetries; for instance, we observe linear mode connectivity and monotonic linear interpolation in our networks, without any alignment of weight spaces."> Abstract</a>
+                 <a href="https://openreview.net/pdf?id=gkrynRGiOi" class="btn btn-default">Paper (Workshop version) </a>
+                 <a href="https://arxiv.org/abs/2405.20231" class="btn btn-default">Paper (Full version) </a>
+
+             </div>
+      </div><!-- end of row -->
+
+
+
       <!--Open problems -->
          <div class="row" id="templatemo_publications_LargeScaleBD">
              <div class="col-md-1"></div>
