--- a/index.html
+++ b/index.html
@@ -59,14 +59,13 @@
         <div class="row">
             <div class="col-md-2"></div>
             <div id="my_photo" class="col-md-4 col-sm-7 col-xs-24">
-                <img src="images/haggai_2.png" alt="image 1"/>
+                <img src="images/haggai017.jpg" alt="image 1"/>
             </div>
             <div class="col-md-1"></div>
             <div class="col-md-16">
                 <h2>Haggai Maron</h2>
 				<p>
-          I am an Assistant Professor at the <a href="https://vee.technion.ac.il/"> Faculty of Electrical and Computer Engineering at the Technion</a>.
-          I am also a senior research scientist at <a href="https://www.nvidia.com/en-us/research/">NVIDIA Research</a> and a member of <a href="https://research.nvidia.com/labs/par/">NVIDIA's TLV lab</a>.
+          I am an Assistant Professor at the <a href="https://vee.technion.ac.il/"> Faculty of Electrical and Computer Engineering at the Technion</a> and a senior research scientist at <a href="https://www.nvidia.com/en-us/research/">NVIDIA Research</a> at <a href="https://research.nvidia.com/labs/par/">NVIDIA's lab in Tel Aviv</a>.
           My primary research interest is in machine learning, with a focus on deep learning for structured data. Specifically, I study how to apply deep learning techniques to sets, graphs, point clouds, surfaces, weight spaces and other mathematical objects that have an inherent symmetry structure. My goal is twofold: first, to understand and design deep learning architectures from a theoretical perspective, for example, by analyzing their expressive power; and second, to demonstrate their practical effectiveness on real-world problems involving structured data.
           I completed my Ph.D. in 2019 at the Weizmann Institute of Science under the supervision of <a href="http://www.wisdom.weizmann.ac.il/~ylipman/">Prof. Yaron Lipman</a>. </br>
           <!--I serve as a reviewer for NeurIPS, ICML, ICCV, SIGGRAPH, SIGGRAPH Asia and ACM TOG.<br>-->
@@ -193,6 +192,9 @@
                    Guy Bar-Shalom, Yam Eitan, Fabrizio Frasca, Haggai Maron <br>
 
                    <i>38th Annual Conference on Neural Information Processing Systems (NeurIPS 2024)  </i> <br> </p>
+                   <i>(A shorter version also appeared in the Symmetry and Geometry in Neural Representations
+ Workshop @ NeurIPS 2024</i> winning the <span style="color:red;">best paper award</span>)</p>
+
                  <a class="btn btn-default abstract" ptitle="Subgraph Graph Neural Networks (Subgraph GNNs) enhance the expressivity of message-passing GNNs by representing graphs as sets of subgraphs. They have shown impressive performance on several tasks, but their complexity limits applications to larger graphs. Previous approaches suggested processing only subsets of subgraphs, selected either randomly or via learnable sampling. However, they make suboptimal subgraph selections or can only cope with very small subset sizes, inevitably incurring performance degradation. This paper introduces a new Subgraph GNNs framework to address these issues. We employ a graph coarsening function to cluster nodes into super-nodes with induced connectivity. The product between the coarsened and the original graph reveals an implicit structure whereby subgraphs are associated with specific sets of nodes. By running generalized message-passing on such graph product, our method effectively implements an efficient, yet powerful Subgraph GNN. Controlling the coarsening function enables meaningful selection of any number of subgraphs while, contrary to previous methods, being fully compatible with standard training techniques. Notably, we discover that the resulting node feature tensor exhibits new, unexplored permutation symmetries. We leverage this structure, characterize the associated linear equivariant layers and incorporate them into the layers of our Subgraph GNN architecture. Extensive experiments on multiple graph learning benchmarks demonstrate that our method is significantly more flexible than previous approaches, as it can seamlessly handle any number of subgraphs, while consistently outperforming baseline approaches."> Abstract</a>
                  <a href="https://arxiv.org/abs/2406.09291" class="btn btn-default">Paper </a>
 
@@ -258,7 +260,7 @@ Aiming to significantly improve the efficiency of previous approaches, we presen
                    Derek Lim*, Theo (Moe) Putterman*, Robin Walters, Haggai Maron, Stefanie Jegelka<br>
                    <i>38th Annual Conference on Neural Information Processing Systems (NeurIPS 2024)  </i> <br>
 
-                 <i>(A shorter version also appeared in HiLD 2024: 2nd Workshop on High-dimensional Learning Dynamics @ ICML 2024</i> winning the <span style="color:red;">Best paper award</span>)</p>
+                 <i>(A shorter version also appeared in HiLD 2024: 2nd Workshop on High-dimensional Learning Dynamics @ ICML 2024</i> winning the <span style="color:red;">best paper award</span>)</p>
 
                  <a class="btn btn-default abstract" ptitle="Many algorithms and observed phenomena in deep learning appear to be affected by parameter symmetries — transformations of neural network parameters that do not change the underlying
       neural network function. These include linear mode connectivity, model merging, Bayesian neural network inference, metanetworks, and several other characteristics of optimization or loss-landscapes.
